Product tests fix for kerberized tests
- Uses new image 'aaneja/hdp2.6-hive-kerberized-jdk17' that is the base `hdp2.6-hive-kerberized` with JDK 17 added to `/opt/java`
- presto-launcher-wrapper.sh was updated to use Java from `/opt/java` if present
- New add-opens for Keberos classes