@@ -37,3 +37,4 @@
 --add-opens=java.base/java.util.regex=ALL-UNNAMED
 --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
 --add-opens=java.base/sun.security.action=ALL-UNNAMED
+--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
